# discord-bot-v3

./: .dockerignore  .gitignore  AGENTS.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
discord-bot/: Dockerfile  main.py  pyproject.toml
discord-bot/src/handlers/: __init__.py
discord-bot/src/handlers/giphy/: giphy_handler.py
discord-bot/src/handlers/gitscrape/: Types.py  create_repo_embed.py  gitscrape_handler.py  repo_scraping.py
discord-bot/src/handlers/gitscrape/agents/: query_expansion_agent.py  reranker_agent.py
discord-bot/src/handlers/imagine/: imagine_handler.py
discord-bot/src/handlers/roast/: agent.py  fetch_response.py  roast_handler.py
discord-bot/src/handlers/speech/: speech_handler.py
discord-bot/src/handlers/waifu/: waifu_handler.py
discord-bot/src/prompts/: __init__.py
discord-bot/src/utils/: __init__.py  agent_utils.py  api_client.py  image_utils.py
gitscrape/: Dockerfile  main.py  pyproject.toml
gitscrape/src/: repo_controller.py  repo_scraping.py
gitscrape/src/agents/: query_expansion_agent.py  reranker_agent.py
gitscrape/src/prompts/: __init__.py
gitscrape/src/utils/: Repository.py  __init__.py  agent_utils.py  calculate_repo_rank.py  http_utils.py  response_type.py
notebooks/: agent-nb.ipynb  groq_tts.ipynb  query_expansion_agent.ipynb  repo_scraping.ipynb  reranker_agent.ipynb
server/: Dockerfile  main.py  pyproject.toml  pyrefly.toml
server/src/prompts/: __init__.py  roast.py
server/src/routers/: giphy.py  gitscrape.py  imagine.py  roast.py  speech.py  waifu.py
server/src/services/: giphy.py  gitscrape.py  imagine.py  speech.py  waifu.py
src/agent/: agents.py  utils.py
src/handlers/: __init__.py  giphy_handler.py  imagine_handler.py  roast_handler.py  speech_handler.py  utils.py  waifu_handler.py
src/handlers/giphy/: giphy_handler.py
src/handlers/gitscrape/: gitscrape_handler.py  repo_scraping.py
src/handlers/gitscrape/agents/: __init__.py  reranker_agent.py
src/handlers/gitscrape/utils/: __init__.py  calculate_repo_rank.py  create_repo_embed.py
src/handlers/imagine/: imagine_handler.py
src/handlers/roast/: agent.py
src/prompts/: query_expansion.py  roast.py
src/utils/: __init__.py  agent_utils.py
zeos_sarcastic_cat_ai/: pyproject.toml
zeos_sarcastic_cat_ai/src/: agents.py
zeos_sarcastic_cat_ai/src/utils/: __init__.py
