[project]
name = "discord-bot-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.7.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
