[project]
name = "discord-bot-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.7.1",
    "dotenv>=0.9.9",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "requests>=2.33.1",
]

[dependency-groups]
dev = ["ty>=0.0.37"]
