[project]
name = "gitscrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=6.1.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-groq>=1.1.2",
    "ty>=0.0.36",
]

[tool.fastapi]
entrypoint = "main:app"
