[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.138.2",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
]
