[project]
name = "zeos-sarcastic-cat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
]

[dependency-groups]
dev = ["ty>=0.0.37"]

[tool.fastapi]
entrypoint = "main:app"
